sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: ';' expected but '=' found.
    notChanged:Int = 0;
                   ^