sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  sorting = true
  while (sorting == true) {
    notChanged:Int = 0;
    
  	for (i <- 0 to getValueCount()-1 ) {
      
      if (isSmaller(i, i+1)) {
        swap(i, i+1)
        
      } else {
        notChanged += 1; 
      }
    }
    
    if (notChanged < getValueCount() ) {
      sorting = false;
    }
  }
  
}